Switched from homebrewn ValueObject class to records (#242)